Fix unwanted visible CSS definition with the newsletters

--- a/decidim-core/app/packs/stylesheets/decidim/email.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/email.scss
@@ -25,6 +25,13 @@ body{
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+
+  &.preview{
+    .see-on-website,
+    .unsubscribe{
+      cursor: not-allowed;
+    }
+  }
 }
 
 .ExternalClass{
